# rust-toolchain-manifest

./: .deny.toml  .gitignore  .justfile  .rustfmt-toolchain.toml  .rustfmt.toml  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  editorconfig.yml  nix-develop.yml  nix.yml  security-audit.yml  update-flake-lock.yml  update-rust-toolchain.yml
nix/: checks.nix  ci.nix  crane.nix  default.nix  devshells.nix  formatter.nix  meta.nix  packages.nix  rust-toolchain.nix
src/: cli.rs  error.rs  main.rs  release.rs
