[package]
name = "rust-toolchain-manifest"
version = "0.1.2"
edition = "2021"
description = "Query the official rust release manifests"
authors = [ "Alexander Kenji Berthold" ]
license = "MIT"
include = ["src/*", "LICENSE", "README.md"]
readme = "README.md"
repository = "https://github.com/a-kenji/rust-toolchain-manifest"
documentation = "https://github.com/a-kenji/rust-toolchain-manifest"
homepage = "https://github.com/a-kenji/rust-toolchain-manifest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["blocking"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = {version = "1.0.96", features = ["preserve_order"]}
thiserror = "1.0.39"
toml = "0.7.3"
