[package]
name = "rust-toolchain-manifest"
version = "0.2.2"
edition = "2021"
description = "Query the official rust release manifests"
authors = ["Alexander Kenji Berthold"]
license = "MIT"
include = ["src/*", "LICENSE", "README.md"]
readme = "README.md"
repository = "https://github.com/a-kenji/rust-toolchain-manifest"
documentation = "https://github.com/a-kenji/rust-toolchain-manifest"
homepage = "https://github.com/a-kenji/rust-toolchain-manifest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["blocking"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = { version = "1.0.115", features = ["preserve_order"] }
thiserror = "1.0.58"
toml = "0.8.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
